style.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');


h1 {
    font-family: 'Press Start 2P', cursive;
    color: red; 
    font-size: 50px;
    text-align: center;
    width: 600px;
    height: 80px;
    top: 0%;
    left: 30%;
    position: relative;
    /*background:linear-gradient(0deg,rgb(194, 34, 141)0%,rgba(253,187,45,1)100%);*/

}
p{
  text-align: center;
  font-size: small;
  background-color: white;
  width: 350px;
  top: 15%;
  left: 36%;
  border-radius: 5px;
  border-style: dotted;
  padding: 15px;
  position:relative;

}

body {
  background-image: url('images/shoppingc.png');
  /*opacity: 0.5;*/
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  /* background:linear-gradient(0deg,rgba(34,193,194,1)0%,rgba(253,187,45,1)100%);*/
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
    cursor:crosshair;
    width: -moz-min-content;    /* Firefox */
    width: -webkit-min-content; /* Chrome */
    width: min-content;
  }

#canvas{
  /*background:linear-gradient(0deg,rgba(34,193,194,1)0%,rgba(253,187,45,1)100%);
*/
  border:darkblue;
}
  .score{
    color: white;
    font-size: 25px;
    margin: 20px;
    font-family: 'Press Start 2P', cursive;
    position: absolute;
    background-color: brown;

    }
    
  #gameboard {
    background-color: white;
    height: 450px;
    width: 90%;
    margin: 80px auto;
    border-style: outset;
    border-color: indianred;
  }

  #projectiles{
    border:rgb(153, 0, 255);
    border-radius: 2px;
  }
/*Menu*/
  #modaelEl{
   
   /*background:linear-gradient(0deg,rgba(34,193,194,1)0%,rgba(253,187,45,1)100%);*/
   background-color: transparent;
 
    /* background-image: url('images/sda-menu.png');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center; */
    color: white;
    text-align: center;
    font-size: 30px;
    height: 150px;
    width: 40%;
    position: absolute;
    border-style: hidden;
    top:50%;
    left:50%;

    transform: translate(-50%, -50%);     

  }

  #bigScoreEl{
    margin: auto;
    text-align: center;
    background-color: red;
    color: blue;
    border-radius: 5px;
    font-size: 30px;
    height: 0px;
    width: 0px;
    position: absolute;
    border-radius: 5px;
    border-style: hidden;
    top: 30%;
    left: 50%;
    margin-right: 50%;
    transform: translate(-50%, -50%);     

  }

  /*button*/
  #startGame{ 
    color: whitesmoke;
    border-radius: 40px;
    font-size: 25px;
    padding: 15px 150px;
    margin: auto;
    text-align: center;
    background:linear-gradient(0deg,rgba(34,193,194,1)0%,rgba(253,187,45,1)100%);
    border-style: inset;
    height: 100px;
    width: 400px;
    position: absolute;
    top: 100%;
    left: 50%;
    margin-right: 50%;

    transform: translate(-50%, -50%);     
    cursor:pointer;
    }
  
    h2{
      font-size: x-small;
    }

    #menu,#gameOver {
   
      background-color: rgb(87, 86, 86);
       text-shadow: 0 0 35px purple, 0 0 5px #0000FF;      
       color: red;
       font-family: 'Press Start 2P', cursive;
       text-align: center;
       font-size: 40px;
       height: 100%;
       width: 100%;
       position: absolute;
       border-style: hidden;
       top:50%;
       left:50%;
       justify-content:space-evenly;
   
       transform: translate(-50%, -50%);     
   
     }

    .para {
      text-shadow:5px 5px 3px black;
      color: white;
      font-size: 10px;
      width: 50%;
      left: 50%;
      justify-content: center;
      padding: 15px 320px;
      line-height: 1.4;

    }

